--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "tst-gh-pgs",
   "version": "0.1.0",
   "private": true,
+  "homepage": "http://ronmasuary.github.io/tst",
   "dependencies": {
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -11,6 +12,7 @@
     "react-scripts": "3.4.1"
   },
   "scripts": {
+    "deploy": "npm run build&&gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
